[project]
name = "kv-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ankurdhuriya", email = "mail.ankurdhuriya@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[project.scripts]
kv-translator = "kv_translator:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
